# REST-API-Server

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  configuration.yaml  index.html  mkdocs.yaml  sitemap.xml
.github/workflows/: mkdocs.yaml
about/: index.html
api/: index.html
docs/: README.md  about.md  api.md  mkdocs.md  references.md  swagger.md
mkdocs/: index.html
references/: index.html
search/: search_index.json
src/: configuration.rs  lib.rs  main.rs  server.rs  startup.rs  telemetry.rs  v1_api.rs
src/routes/: health_check.rs  mod.rs  v1_health_check.rs  v1_ping.rs  v1_things.rs
swagger/: docker-compose.yaml  env.example  index.html
tests/: health_check.rs
tests/rest/: health_check.http
